# ccminer-lattica

./: .gitignore  Makefile.am  algo_stubs.cpp  algos.h  bench.cpp  build-hive-package.sh  build-linux-package.sh  build-release.sh  ccminer-cuda10.vcxproj  ccminer-cuda10.vcxproj.filters  ccminer-cuda11.vcxproj  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure.ac  cuda.cpp  hashlog.cpp  miner.h  solo_addr.cpp  util.cpp
algos/sha3d/: cuda_sha3d.cu  sha3d.cu
hive/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh
scrypt/: salsa_kernel.cu
sha512/: sha512bc.cu
